# apache-airflow-providers-box

./: .gitignore  .pdm-python  AGENTS.md  NOTICE  README.md  provider.yaml  pyproject.toml  standalone.sh
.github/workflows/: release.yml
box/: __init__.py
box/hooks/: box.py
box/operators/: box.py
box/sensors/: box.py
dags/: basic.py
src/airflow/providers/box/: __init__.py  get_provider_info.py
src/airflow/providers/box/hooks/: box.py
src/airflow/providers/box/operators/: box.py
src/airflow/providers/box/sensors/: box.py
src/airflow/providers/box/triggers/: box.py
src/airflow_providers_box/: get_provider_info.py
src/airflow_providers_box/hooks/: box.py
src/airflow_providers_box/operators/: box.py
src/airflow_providers_box/sensors/: box.py
src/airflow_providers_box/triggers/: box.py
src/box_airflow_provider/: __init__.py  _version.txt  models.py
src/box_airflow_provider/hooks/: box.py
src/box_airflow_provider/operators/: box.py
src/box_airflow_provider/sensors/: box.py
src/box_airflow_provider/triggers/: box.py
tests/: async_test_utils.py  conftest.py  test_box_hook.py  test_box_sensor.py  test_box_trigger.py
