[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "box-airflow-provider"
authors = [
    { name = "Mikael Arvola", email = "marvel@illinois.edu" },

]
license = { text = "Apache License 2.0" }
description = "Box.com provider for Apache Airflow."
classifiers = [
    "Framework :: Apache Airflow",
    "Framework :: Apache Airflow :: Provider",
]
dynamic = [
    "version"
]
requires-python = "~=3.12.0"
dependencies = [
    "apache-airflow>=2.10.0,<3",
    "boxsdk>=10",
]

[project.urls]
Source = "https://github.com/graduatecollege/apache-airflow-providers-box"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.entry-points.apache_airflow_provider]
provider_info = "box_airflow_provider.__init__:get_provider_info"

[tool.setuptools.dynamic]
version = { attr = "box_airflow_provider.__version__" }


[tool.pdm.scripts]
test = "pytest"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
