[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "apache-airflow-providers-box"
authors = [
    { name = "Mikael Arvola", email = "marvel@illinois.edu" },
]
license = { text = "Apache License 2.0" }
license-files = [
    "LICENSE", "NOTICE"
]
description = "Box.com provider for Apache Airflow."
classifiers = [
    "Framework :: Apache Airflow",
    "Framework :: Apache Airflow :: Provider",
]
dynamic = [
    "version"
]
requires-python = "~=3.12.0"
dependencies = [
    "apache-airflow>=2.10.0,<3",
    "boxsdk>=10",
]

[project.urls]
Source = "https://github.com/graduatecollege/apache-airflow-providers-box"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.entry-points.apache_airflow_provider]
provider_info = "box_airflow_provider.__init__:get_provider_info"

[tool.pdm.version]
source = "scm"
tag_filter = "v*"
tag_regex = '^v(?P<version>\d+\.\d+\.\d+)$'
write_to = "box_airflow_provider/_version.txt"


[tool.pdm.scripts]
test = "pytest"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
