[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "apache-airflow-providers-box"
authors = [
    { name = "Mikael Arvola", email = "marvel@illinois.edu" },
]
license-files = [
    "LICENSE", "NOTICE"
]
description = "Box.com provider for Apache Airflow."
classifiers = [
    "Framework :: Apache Airflow",
    "Framework :: Apache Airflow :: Provider",
]
dynamic = [
    "version"
]
requires-python = "~=3.12.0"
dependencies = [
    "apache-airflow>=3",
    "boxsdk>=10",
]


[project.urls]
Source = "https://github.com/graduatecollege/apache-airflow-providers-box"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.entry-points.apache_airflow_provider]
provider_info = "airflow_providers_box.get_provider_info:get_provider_info"

[tool.pdm.version]
source = "scm"
version_format = "src.airflow_providers_box.version:format_version"
tag_filter = "v*"
tag_regex = '^v(?P<version>\d+\.\d+\.\d+)$'
write_to = "airflow_providers_box/_version.txt"


[tool.pdm.scripts]
test = "pytest --timeout=5"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
    "pip>=26.0.1",
]
